# webrtc-aec3-800ms

./: .gitignore  BUILD_SUCCESS_REPORT.md  BUILD_SUMMARY.md  INTEGRATION_STEPS.md  LICENSE  README.md  SETUP_INSTRUCTIONS.md  TESTING_STATUS.md  VERIFICATION_STATUS.md  atomic_stubs.c  build-so-file.sh  build-with-jni.sh  monitor-build.sh
.github/workflows/: build-webrtc.yml
api21-arm64/: VERIFICATION_REPORT.md
artifacts/build-info/: build-info.txt
artifacts/webrtc-build-arm64-v8a/audio_processing/: aec3_config_json.ninja  aec_dump_interface.ninja  apm_logging.ninja  audio_buffer.ninja  audio_frame_proxies.ninja  audio_processing.ninja  audio_processing_statistics.ninja  audioproc_test_utils.ninja  high_pass_filter.ninja  residual_echo_detector.ninja
artifacts/webrtc-build-arm64-v8a/audio_processing/aec3/: adaptive_fir_filter_erl.ninja  aec3_common.ninja  aec3_fft.ninja  render_buffer.ninja
artifacts/webrtc-build-arm64-v8a/audio_processing/aec_dump/: null_aec_dump_factory.ninja
artifacts/webrtc-build-arm64-v8a/audio_processing/agc/: agc.ninja  gain_control_interface.ninja  legacy_agc.ninja  level_estimation.ninja
build-info/: build-info.txt
cas-atomic/build-info/: build-info.txt
complete-symbols/build-info/: build-info.txt
docs/: INTEGRATION_GUIDE.md  WEBRTC_AEC3_800MS_IMPLEMENTATION_PLAN.md
downloaded-libs/atomic-stubs/build-info/: build-info.txt
jni/: BUILD.gn  BUILD.gn.append  android_apm_wrapper.cpp  webrtc_apm_jni.cpp
longdouble-symbols/build-info/: build-info.txt
patches/: 0001-increase-aec3-filter-length-1200ms.patch  0001-increase-aec3-filter-length-800ms.patch  0001-increase-aec3-filter-length-800ms.patch.backup
scripts/: build-android-lib.sh  build-shared-lib.sh  generate-patches.sh
system-libcxx/system-libcxx/build-info/: build-info.txt
(+58 files in other folders)
