# Build file for WebRTC APM JNI wrapper

import("//build/config/android/config.gni")

shared_library("webrtc_apms") {
  sources = [
    "webrtc_apm_jni.cpp",
  ]

  deps = [
    "//modules/audio_processing",
    "//rtc_base",
    "//common_audio",
    "//api:scoped_refptr",
    "//third_party/abseil-cpp/absl/types:optional",
  ]

  ldflags = [
    "-Wl,-soname,libwebrtc_apms.so",
    "-Wl,--gc-sections",
    "-Wl,--exclude-libs,ALL",
    "-static-libstdc++",
  ]

  libs = [
    "log",
  ]
}
